kubernetes/apps/flux-system/addons/webhooks/github/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
spec:
  parentRefs:
    - name: external
      namespace: ingress-system
  hostnames:
    - flux-webhook.mcf.io
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
